--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "emoji-picker-react": "^4.9.4",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
